# raytracer

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
builder/src/: main.rs
crates/runner/: Cargo.toml  build.rs
crates/runner/src/: blas.rs  bvh.rs  camera.rs  dielectric.rs  dims.rs  extension.rs  instance.rs  lambertian.rs  lib.rs  logic.rs  main.rs  material.rs  mesh.rs  new_ray.rs  path.rs  queue.rs  render.rs  sample.rs  scenes.rs  texture.rs  tlas.rs
crates/runner/src/shaders/: common.wesl  extension.wesl  logic.wesl  new_ray.wesl  queue.wesl  shader.wesl
crates/shaders/: Cargo.toml
crates/shaders/src/: lib.rs  logic.rs  other.rs  render.rs
shaders/: bvh.slang  camera.slang  common.slang  dielectric.slang  emissive.slang  extension.slang  hit.slang  lambertian.slang  light.slang  logic.slang  material.slang  math.slang  metallic.slang  new_ray.slang  path.slang  pathtracer.slang  queue.slang  random.slang  ray.slang  ray_connect.slang  ray_extend.slang  raycast.slang  sample.slang  scene.slang  shade.slang
shaders/archive/: bvh.slang  camera.slang  dielectric.slang  emissive.slang  hit.slang  lambertian.slang  logic.slang  magic.slang  main.slang  material.slang  math.slang  metallic.slang  path.slang  queue.slang  random.slang  raycast.slang  render.slang  sample.slang  scene_bindings.slang  shadow.slang  state_bindings.slang  tlas.slang
src/: app.rs  binder.rs  camera.rs  instance.rs  lib.rs  material.rs  mesh.rs  pathtracer.rs  pathtracer_manager.rs  pathtracer_state.rs  queue.rs  render.rs  render_resources.rs  scenes.rs  schedule.rs  texture.rs  threadpool.rs  transform.rs  winnit.rs
