[package]
name = "raytracer"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
glam = { version = "0.30.9", features = ["bytemuck"] }
bytemuck = { version = "1.24.0", features = ["derive"] }
clap = { version = "4.5.51", features = ["derive"] }
env_logger = "0.11.8"
futures = { version = "0.3.31", features = ["std"] }
strum = { version = "0.27.2", features = ["std"] }
wgpu = { version = "27.0.1", features = [
  "spirv",
  "vulkan",
  "vulkan-portability",
] }
winit = "0.30.12"
tokio = { version = "1.48.0", features = ["full"] }
log = "0.4.28"
anyhow = "1.0.100"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
wesl = "0.2.0"
image = "0.25.9"
serde = "1.0.228"
serde_json = "1.0.145"
phf = "0.13.1"
gltf = "1.4.1"
itertools = "0.14.0"
rand = "0.9.2"
tobj = { version = "4.0.3", features = ["reordering"] }
bevy_ecs = { version = "0.18.0", features = ["debug"] }
rayon = "1.11.0"
crossbeam = "0.8.4"

[build-dependencies]
wesl = "0.2.0"
phf = "0.13.1"
phf_codegen = "0.13.1"
